fix(tech): grid cards overflow

--- a/dashboard/src/app/styles/normalize-antd.scss
+++ b/dashboard/src/app/styles/normalize-antd.scss
@@ -71,3 +71,8 @@
     background-color: var(--color-gray);
     border-color: var(--color-gray);
 }
+
+.ant-tabs {
+    // FIXME: @hardcoded
+    overflow: unset;
+}
